--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -48,7 +48,7 @@ To follow along with this guide, set your new Move package to `counter`.
 
 In the `create` function, a new `Counter` object is created and [shared](../../../concepts/object-ownership/shared.mdx). 
 
-### Incrementing and Reseting `Counter`
+### Incrementing and resetting `Counter`
 
 {@inject: examples/distributed-counter/counter/sources/counter.move#fun=increment noComments}
 The `increment` function accepts a mutable reference to any shared `Counter` object and will increments its `value` field.
