--- a/docs/content/references/cli/cheatsheet.mdx
+++ b/docs/content/references/cli/cheatsheet.mdx
@@ -181,7 +181,7 @@ The cheat sheet highlights common Sui CLI commands.
 			<td class="w-1/3">Call a Move package</td>
 		</tr>
 		<tr>
-			<td class="w-2/3">`sui client merge-coins \`<br/>&nbsp;&nbsp;`--primary-coin COIN_ID \`<br/>&nbsp;&nbsp;`--coin-to-merge COIN_ID`</td>
+			<td class="w-2/3">`sui client merge-coin \`<br/>&nbsp;&nbsp;`--primary-coin COIN_ID \`<br/>&nbsp;&nbsp;`--coin-to-merge COIN_ID`</td>
 			<td class="w-1/3">Merge two coins</td>
 		</tr>
 		<tr>
