--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -12,7 +12,7 @@ The guide is split into two parts:
 
 :::tip Additional resources
 
-[Example source code](https://github.com/MystenLabs/sui/blob/c617f8dced6c61b7c2070a51999bc202d43f7375/examples/distributed-counter)
+[Example source code](https://github.com/MystenLabs/sui/blob/60bb8bdc274b9e5706fd916cd84c13f81e832529/sdk/create-dapp/templates/react-e2e-counter)
 
 :::
 
@@ -38,22 +38,22 @@ To follow along with this guide, set your new Move package to `counter`.
 
 ### `Counter` struct
 
-{@inject: examples/distributed-counter/counter/sources/counter.move#struct=Counter noComments}
+{@inject: sdk/create-dapp/templates/react-e2e-counter/move/counter/sources/counter.move#struct=Counter noComments}
 
 - The `Counter` type stores the address of its `owner`, its current `value`, and its own `id`.
 
 ### Creating `Counter`
 
-{@inject: examples/distributed-counter/counter/sources/counter.move#fun=create noComments}
+{@inject: sdk/create-dapp/templates/react-e2e-counter/move/counter/sources/counter.move#fun=create noComments}
 
 In the `create` function, a new `Counter` object is created and [shared](../../../concepts/object-ownership/shared.mdx). 
 
 ### Incrementing and resetting `Counter`
 
-{@inject: examples/distributed-counter/counter/sources/counter.move#fun=increment noComments}
+{@inject: sdk/create-dapp/templates/react-e2e-counter/move/counter/sources/counter.move#fun=increment noComments}
 The `increment` function accepts a mutable reference to any shared `Counter` object and will increments its `value` field.
 
-{@inject: examples/distributed-counter/counter/sources/counter.move#fun=set_value noComments}
+{@inject: sdk/create-dapp/templates/react-e2e-counter/move/counter/sources/counter.move#fun=set_value noComments}
 
 The `set_value` function accepts a mutable reference to any shared `Counter` object, the `value` to set its `value` field, and the `ctx` which contains the `sender` of the transaction. This function can only be ran by the `Counter`'s `owner`.
 
@@ -67,7 +67,7 @@ Learn more about taking [object references as input](../../../concepts/sui-move-
 
 The final module should look like this
 
-{@inject: examples/distributed-counter/counter/sources/counter.move noComments}
+{@inject: sdk/create-dapp/templates/react-e2e-counter/move/counter/sources/counter.move noComments}
 
 ### Deployment {#deployment}
 
@@ -194,7 +194,16 @@ yarn create @mysten/dapp --template react-client-dapp
 
 Add the `packageId` value you saved from [deploying your package](#deployment) to a new `src/constants.ts` file in your project:
 
-{@inject: examples/distributed-counter/counter-app/src/constants.ts noComments}
+```ts
+  export const DEVNET_COUNTER_PACKAGE_ID = "0xTODO";
+  export const TESTNET_COUNTER_PACKAGE_ID = "0x7b6a8f5782e57cd948dc75ee098b73046a79282183d51eefb83d31ec95c312aa";
+  export const MAINNET_COUNTER_PACKAGE_ID = "0xTODO";
+```
+
+Update the `src/networkConfig.ts` file to include the `packageID` constants.
+
+{@inject: sdk/create-dapp/templates/react-e2e-counter/src/networkConfig.ts noComments}
+
 
 ### Creating `Counter`
 
@@ -203,7 +212,12 @@ You need a way to create a new `Counter` object. Do this by creating a new `Crea
 ```tsx
 import { Button, Container } from '@radix-ui/themes';
 
-export function CreateCounter(props: { onCreated: (id: string) => void }) {
+export function CreateCounter( { onCreated }: { onCreated: (id: string) => void; } ) {
+
+  function create() {
+    // TODO
+  }
+
   return (
     <Container>
       <Button
@@ -216,10 +230,6 @@ export function CreateCounter(props: { onCreated: (id: string) => void }) {
       </Button>
     </Container>
   );
-
-  function create() {
-    props.onCreated('TODO');
-  }
 }
 ```
 
@@ -230,81 +240,17 @@ To do this, you need to construct a `Transaction`, with the appropriate `moveCal
 First, import `Transaction` from `@mysten/sui`, `COUNTER_PACKAGE_ID` from your constants.ts file created previously, and `useSignAndExecuteTransaction` from `@mysten/dapp-kit`.
 
 ```tsx
-import { useSignAndExecuteTransaction } from '@mysten/dapp-kit';
+import { useSignAndExecuteTransaction, useSuiClient } from '@mysten/dapp-kit';
 import { Transaction } from '@mysten/sui/transactions';
 
-import { COUNTER_PACKAGE_ID } from './constants';
+import { useNetworkVariable } from "./networkConfig";
 ```
 
 Next, call the `useSignAndExecuteTransaction` hook in your component, which provides a `mutate` function you can use in your `create` function:
 
 ```tsx
-export function CreateCounter(props: { onCreated: (id: string) => void }) {
-  const { mutate: signAndExecute } = useSignAndExecuteTransaction({
-    execute: async ({ bytes, signature }) =>
-      await suiClient.executeTransactionBlock({
-        transactionBlock: bytes,
-        signature,
-        options: {
-          // Raw effects are required so the effects can be reported back to the wallet
-          showRawEffects: true,
-          showEffects: true,
-        },
-      }),
-  });	
-  return (
-    <Container>
-      <Button
-        size="3"
-        onClick={() => {
-          create();
-        }}
-      >
-        Create Counter
-      </Button>
-    </Container>
-  );
-
-  function create() {
-    // TODO
-  }
-}
-```
-
-Finally, construct your `Transaction`:
-
-```tsx
-function create() {
-  const tx = new Transaction();
-  tx.moveCall({
-    arguments: [],
-    target: `${COUNTER_PACKAGE_ID}::counter::create`,
-  });
-
-  signAndExecute(
-    {
-      transaction: tx,
-      chain: 'sui:testnet',
-    },
-    {
-      onSuccess: (result) => {
-        const objectId = result.effects?.created?.[0]?.reference?.objectId;
-        if (objectId) {
-          props.onCreated(objectId);
-        }
-      },
-    },
-  );
-}
-```
-
-You now have a functional component that can create a new `Counter` object, and because the `showRawEffects` and `showEffects` options are toggled on, the transaction results ensure finality. The `SuiClient` is used to set this up.
-To get an instance of `SuiClient`, you can use the `useSuiClient` hook from dApp Kit:
-
-```tsx
-import { useSignAndExecuteTransaction, useSuiClient } from '@mysten/dapp-kit';
-
-export function CreateCounter(props: { onCreated: (id: string) => void }) {
+export function CreateCounter( { onCreated }: { onCreated: (id: string) => void; } ) {
+  const counterPackageId = useNetworkVariable("counterPackageId");
   const suiClient = useSuiClient();
   const { mutate: signAndExecute } = useSignAndExecuteTransaction({
     execute: async ({ bytes, signature }) =>
@@ -319,16 +265,37 @@ export function CreateCounter(props: { onCreated: (id: string) => void }) {
       }),
   });	
 
-  //...
+  function create() {
+    // TODO
+  }
+
+  return (
+    <Container>
+      <Button
+        size="3"
+        onClick={() => {
+          create();
+        }}
+      >
+        Create Counter
+      </Button>
+    </Container>
+  );
+
 }
 ```
+
+Finally, construct your `Transaction`:
+
+{@inject: sdk/create-dapp/templates/react-e2e-counter/src/CreateCounter.tsx noComments}
+
+You now have a functional component that can create a new `Counter` object, and because the `showRawEffects` and `showEffects` options are toggled on, the transaction results ensure finality. The `SuiClient` is used to set this up.
 
 ### Set up routing
 
 Now that your users can create counters, you need a way to route to them. Routing in a React app can be complex, but this example keeps it basic. Set up your `src/App.tsx` file so that you render the `CreateCounter` component by default, and if you want to display a specific counter you can put its ID into the hash portion of the URL.
 
-
-{@inject: examples/distributed-counter/counter-app/src/App.tsx noComments}
+{@inject: sdk/create-dapp/templates/react-e2e-counter/src/App.tsx noComments}
 
 This sets up your app to read the hash from the URL, and get the counter's ID if the hash is a valid object ID. Then, it either renders a `Counter` (which you define in the next step) if you have a counter ID, or the `CreateCounter` button from the previous step. When a counter is created, you update the URL, and set the counter ID.
 
@@ -343,23 +310,35 @@ For your counter, you want to display three elements:
 - A reset button, which calls the `set_value` Move function with `0`. This is only shown if the current user owns the counter.
 
 ```tsx
-import { useCurrentAccount, useSuiClientQuery } from '@mysten/dapp-kit';
-import { SuiObjectData } from '@mysten/sui/client';
+import {
+  useCurrentAccount,
+  useSuiClientQuery,
+} from "@mysten/dapp-kit";
 import { Button, Flex, Heading, Text } from "@radix-ui/themes";
 
 
 export function Counter({ id }: { id: string }) {
   const currentAccount = useCurrentAccount();
-  const { data, refetch } = useSuiClientQuery('getObject', {
+  const { data, isPending, error, refetch } = useSuiClientQuery("getObject", {
     id,
     options: {
       showContent: true,
+      showOwner: true,
     },
   });
 
-  if (!data?.data) return <div>Not found</div>;
+  const executeMoveCall = (method: "increment" | "reset") => {
+    // TODO
+  };
 
-  const ownedByCurrentAccount = getCounterFields(data.data)?.owner === currentAccount?.address;
+  if (isPending) return <Text>Loading...</Text>;
+
+  if (error) return <Text>Error: {error.message}</Text>;
+
+  if (!data.data) return <Text>Not found</Text>;
+
+  const ownedByCurrentAccount =
+    getCounterFields(data.data)?.owner === currentAccount?.address;
 
   return (
     <>
@@ -378,14 +357,9 @@ export function Counter({ id }: { id: string }) {
       </Flex>
     </>
   );
-
-  function executeMoveCall(method: 'increment' | 'reset') {
-    // TODO
-  }
 }
-
 function getCounterFields(data: SuiObjectData) {
-  if (data.content?.dataType !== 'moveObject') {
+  if (data.content?.dataType !== "moveObject") {
     return null;
   }
 
@@ -397,64 +371,6 @@ This snippet has a few new concepts to examine. It uses the `useSuiClientQuery` 
 
 The code also adds an `executeMoveCall` function that still needs implementing. This works just like the `create` function you used to create the counter. Instead of using a callback prop like you did for `CreateCounter`, you can use the refetch provided by `useSuiClientQuery` to reload your `Counter` object after you've executed your PTB.
 
-```tsx
-import { Button, Flex, Heading, Text } from "@radix-ui/themes";
-import {
-	useCurrentAccount,
-	useSignAndExecuteTransaction,
-	useSuiClient,
-	useSuiClientQuery,
-} from '@mysten/dapp-kit';
-import { SuiObjectData } from '@mysten/sui/client';
-import { Transaction } from '@mysten/sui/transactions';
-
-import { COUNTER_PACKAGE_ID } from './constants';
-
-export function Counter({ id }: { id: string }) {
-  const currentAccount = useCurrentAccount();
-  const suiClient = useSuiClient();
-  const { mutate: signAndExecute } = useSignAndExecuteTransaction({
-    execute: async ({ bytes, signature }) =>
-      await suiClient.executeTransactionBlock({
-        transactionBlock: bytes,
-        signature,
-        options: {
-          // Raw effects are required so the effects can be reported back to the wallet
-          showRawEffects: true,
-          showEffects: true,
-        },
-      }),
-  });	
-
-  // ...
-
-  function executeMoveCall(method: 'increment' | 'reset') {
-    const tx = new Transaction();
-
-    if (method === 'reset') {
-      tx.moveCall({
-        arguments: [tx.object(id), tx.pure.u64(0)],
-        target: `${COUNTER_PACKAGE_ID}::counter::set_value`,
-      });
-    } else {
-      tx.moveCall({
-        arguments: [tx.object(id)],
-        target: `${COUNTER_PACKAGE_ID}::counter::increment`,
-      });
-    }
-
-    signAndExecute(
-      {
-        transaction: tx,
-      },
-      {
-        onSuccess: async () => {
-          await refetch();
-        },
-      },
-    );
-  }
-}
-```
+{@inject: sdk/create-dapp/templates/react-e2e-counter/src/Counter.tsx noComments}
 
 Your counter app is now ready to count. To learn more about dApp Kit, check out the [dApp Kit docs](https://sdk.mystenlabs.com/dapp-kit).
