--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -139,7 +139,7 @@ In this final part of the app example, you build a frontend (UI) that allows end
 
 :::note
 
-To skip building the frontend and test out your newly deployed package, create this example using the following template and [connect your deployed package](#connecting-your-package): 
+To skip building the frontend and test out your newly deployed package, create this example using the following template and follow the instructions in the template's `README.md` file: 
 
 ```bash
 pnpm create @mysten/dapp --template react-e2e-counter
