Addressed comment: replaced :::note with :::info

--- a/docs/content/guides/developer/app-examples/e2e-counter.mdx
+++ b/docs/content/guides/developer/app-examples/e2e-counter.mdx
@@ -30,7 +30,7 @@ Before getting started, make sure you have:
 
 In this part of the guide, you write the Move contracts that create, increment, and reset counters. The first step is to [set up a Move package](../first-app/write-package.mdx) for storing your Move modules.
 
-:::note
+:::info
 
 To follow along with this guide, set your new Move package to `counter`.
 
@@ -137,7 +137,7 @@ To turn this into a complete dApp, you need to [create a frontend](#frontend).
 In this final part of the app example, you build a frontend (UI) that allows end users to create, increment, and reset `Counter` objects.
 
 
-:::note
+:::info
 
 To skip building the frontend and test out your newly deployed package, create this example using the following template and follow the instructions in the template's `README.md` file: 
 
