--- a/docs/content/standards/deepbook/query-the-pool.mdx
+++ b/docs/content/standards/deepbook/query-the-pool.mdx
@@ -1,94 +1,118 @@
 ---
-title: Query the Pool
-slug: /query-the-pool
+title: Query a Pool
 ---
 
-This section shows how to query the pool and order status.
+The `Pool` shared object represents a market, such as a SUI/USDC market. That `Pool` is the only one representing that unique pairing (SUI/USDC) and the pairing is the only member of that particular `Pool`. See [DeepBook Design](./design.mdx#pool) to learn more about the structure of pools.
 
-## Order status {#order-status}
+To perform trades, you pass a `BalanceManager` and `TradeProof` into the relvant `Pool`. Unlike `Pool`s, `BalanceManager` shared objects can contain any type of token, such that the same `BalanceManager` can access multiple `Pool`s to interact with many different trade pairings. See [BalanceManager](./balance-manager.mdx) to learn more.
 
-For limit order, query its data using the following API functions
+## API 
 
-**Function signature for query order info in Move contract**
+DeepBook exposes a set of endpoints that can be used to query any pool.
+
+### Check whitelist status
+
+Accessor to check whether the pool is whitelisted.
 
 ```move
-/// Parameters expected by this func
-///
-///   0. `[pool]` Object ID refers to the pool containing the trading pair
-///   1. `[order_id]` order id of the order being queried
-///   2. `[account_cap]` Object ID of the account_cap authorizing the
-///       accessilility to the escrow account
-
-/// Returns the order info of the order being queried
-public fun get_order_status<BaseAsset, QuoteAsset>(
-     pool: &Pool<BaseAsset, QuoteAsset>,
-     order_id: u64,
-     account_cap: &AccountCap
-): &Order
+public fun whitelisted<BaseAsset, QuoteAsset>(self: &Pool<BaseAsset, QuoteAsset>): bool
 ```
 
-## Pool status {#pool-status}
+### Check quote quantity against base
 
-API functions to query the depth of `level2` orders on both ask-side and bid-side.
-
-**Function signature for get depth of level2 order (ask side) in Move contract**
+Dry run to determine the quote quantity out for a given base quantity.
 
 ```move
-/// Parameters expected by this func
-///
-///   0. `[pool]` Object ID refers to the pool containing the trading pair
-///   1. `[price_low]` the lower price of the price interval to query, inclusive
-///   2. `[price_high]` the upper price of the price interval to query, inclusive
-///   3. `[clock]` Object ID of global system clock
+public fun get_quote_quantity_out<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+    base_quantity: u64,
+    clock: &Clock,
+): (u64, u64, u64)
+```
 
-/// Returns the list of all valid prices and corresponding depthes
-public fun get_level2_book_status_bid_side<BaseAsset, QuoteAsset>(
-     pool: &Pool<BaseAsset, QuoteAsset>,
-     price_low: u64,
-     price_high: u64,
-     clock: &Clock
+### Check quote quantity against quote
+
+Dry run to determine the base quantity out for a given quote quantity.
+
+```move
+public fun get_base_quantity_out<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+    quote_quantity: u64,
+    clock: &Clock,
+): (u64, u64, u64)
+```
+
+### Check quote quantity against quote or base
+
+Dry run to determine the quantity out for a given base or quote quantity. Only one out of base or quote quantity should be non-zero. Returns the (`base_quantity_out`, `quote_quantity_out`, `deep_quantity_required`).
+
+```move
+public fun get_quantity_out<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+    base_quantity: u64,
+    quote_quantity: u64,
+    clock: &Clock,
+): (u64, u64, u64)
+```
+
+### Retrieve mid price for a pool 
+
+Returns the mid price of the pool.
+
+```move
+public fun mid_price<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+    clock: &Clock,
+): u64
+```
+
+### Retrieve order IDs
+
+Returns the `order_id` for all open orders for the `balance_manager` in the pool.
+
+```move
+public fun account_open_orders<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+    balance_manager: ID,
+): VecSet<u128>
+```
+
+### Retrieve prices and quantities for an order book
+
+Returns vectors holding the prices (`price_vec`) and quantities (`quantity_vec`) for the level2 order book. The `price_low` and `price_high` are inclusive, all orders within the range are returned. `is_bid` is `true` for bids and `false` for asks.
+
+```move
+public fun get_level2_range<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+    price_low: u64,
+    price_high: u64,
+    is_bid: bool,
 ): (vector<u64>, vector<u64>)
 ```
 
-## User account status {#user-account-status}
-
-### Open orders {#open-orders}
-
-We provide API function to list all open orders under one account
-
-**Function signature for list all open orders in Move contract**
+Returns vectors holding the prices (`price_vec`) and quantities (`quantity_vec`) for the level2 order book. `ticks` are the maximum number of ticks to return starting from best bid and best ask. (`bid_price`, `bid_quantity`, `ask_price`, `ask_quantity`) are returned as four vectors. The price vectors are sorted in descending order for bids and ascending order for asks.
 
 ```move
-/// Parameters expected by this func
-///
-///   0. `[pool]` Object ID refers to the pool containing the trading pair
-///   1. `[account_cap]` Object ID of the account_cap authorizing the
-///       accessilility to the escrow account
-
-/// Returns list of user's all open orders
-public fun list_open_orders<BaseAsset, QuoteAsset>(
-     pool: &Pool<BaseAsset, QuoteAsset>,
-     account_cap: &AccountCap
-): vector<Order>
+public fun get_level2_ticks_from_mid<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+    ticks: u64,
+): (vector<u64>, vector<u64>, vector<u64>, vector<u64>)
 ```
 
-### Account balance {#order-status}
+### Retrieve balances
 
-The API function to query the custodian account balance for users follows. Note that each pool has its own custodian account.
-
-**Function signature for query user balance in Move contract**
+Get all balances held in this pool.
 
 ```move
-/// Parameters expected by this func
-///
-///   0. `[pool]` Object ID refers to the pool containing the trading pair
-///   1. `[account_cap]` Object ID of the account_cap authorizing the
-///       accessilility to the escrow account
+public fun vault_balances<BaseAsset, QuoteAsset>(
+    self: &Pool<BaseAsset, QuoteAsset>,
+): (u64, u64, u64)
+```
 
-/// Returns user's base_asset_available, base_asset_locked,
-///                quote_asset_available, quote_asset_locked
-public fun usr_balance<BaseAsset, QuoteAsset>(
-     pool: &Pool<BaseAsset, QuoteAsset>,
-     account_cap: &AccountCap
-): (u64, u64, u64, u64)
+### Retrieve Pool ID
+
+Get the ID of the pool given the asset types.
+
+```move
+public fun get_pool_id_by_asset<BaseAsset, QuoteAsset>(registry: &Registry): ID
 ```
