--- a/docs/content/concepts/sui-move-concepts/packages/upgrade.mdx
+++ b/docs/content/concepts/sui-move-concepts/packages/upgrade.mdx
@@ -425,7 +425,7 @@ published-at = "<ORIGINAL-PACKAGE-ID>"
 sui_package = "0x0"
 ```
 
-With the new manifest and code in place, we can proceed.
+With the new manifest and code in place, you can proceed.
 
 </TabItem>
 
