--- a/docs/content/concepts/sui-move-concepts/packages/upgrade.mdx
+++ b/docs/content/concepts/sui-move-concepts/packages/upgrade.mdx
@@ -385,7 +385,7 @@ You can identify the different objects using the `Object.objectType` value in th
 
 Beginning with the Sui `v1.29.0` release, published addresses are automatically managed in the `Move.lock` file and you do not need to take further action.
 
-If the package was published or upgraded with a Sui version prior to `v1.29.0`, you may follow [the guide for adopting automated address management](automated-address-management#adopting-automated-address-management-for-published-packages). Alternatively, refer to the `Manual Addresses` tab above for further steps.
+If the package was published or upgraded with a Sui version prior to `v1.29.0`, you can follow [the guide for adopting automated address management](automated-address-management#adopting-automated-address-management-for-published-packages). Alternatively, refer to the `Manual Addresses` tab above for further steps.
 
 :::
 
