--- a/docs/content/guides/developer/getting-started/local-network.mdx
+++ b/docs/content/guides/developer/getting-started/local-network.mdx
@@ -27,7 +27,7 @@ Each time you start the network by passing `--force-regenesis`, the local networ
 To customize your local Sui network, such as starting other services or changing default ports and hosts, include additional flags or options in the `sui start` command.
 
 :::info
-Note that `with-indexer` and `with-graphql` and related options and flags requires you to use the `sui-pg` binary from the GitHub release archive, or to build the `sui` binary with the indexer feature enabled: `cargo build --bin sui --features indexer`.
+Options and flags like `with-indexer`,  `with-graphql`, and related require you to use the `sui-pg` binary from the [GitHub release archive](https://github.com/MystenLabs/sui/releases), or to build the `sui` binary with the indexer feature enabled: `cargo build --bin sui --features indexer`.
 :::
 
 The following is a list of possible options and flags to pass to `sui start`:
