--- a/docs/content/standards/deepbookv3/design.mdx
+++ b/docs/content/standards/deepbookv3/design.mdx
@@ -1,7 +1,9 @@
 ---
 title: DeepBook Design
-toc_max_heading_level: 4
+sidebar_label: Design
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 At a high level, the DeepBook design follows the following flow, which revolves around three shared objects:
   - `Pool`: A shared object that represents one market and is responsible for managing its order book, users, stakes, and so on. See the [Pool shared object](#pool) section to learn more.
