--- a/docs/content/standards/deepbookv3/orders.mdx
+++ b/docs/content/standards/deepbookv3/orders.mdx
@@ -1,6 +1,9 @@
 ---
-title: Orders
+title: DeepBook Orders
+sidebar_label: Orders
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 Users can create limit or market orders, modify orders, and cancel orders. The `BalanceManager` must have the necessary funds to process orders. DeepBook has four order options and three self matching options. Initially, all trading fees are paid with the DEEP token. Consequently, if you set the `pay_with_deep` flag to `false`, orders automatically fail until the following upgrade.
 
