--- a/docs/content/standards/deepbookv3/query-the-pool.mdx
+++ b/docs/content/standards/deepbookv3/query-the-pool.mdx
@@ -1,6 +1,8 @@
 ---
-title: Query a Pool
+title: Query the Pool
 ---
+
+{@include: ../../snippets/deepbook.mdx}
 
 The `Pool` shared object represents a market, such as a SUI/USDC market. That `Pool` is the only one representing that unique pairing (SUI/USDC) and the pairing is the only member of that particular `Pool`. See [DeepBook Design](./design.mdx#pool) to learn more about the structure of pools.
 
