--- a/docs/content/standards/deepbookv3/staking-governance.mdx
+++ b/docs/content/standards/deepbookv3/staking-governance.mdx
@@ -2,6 +2,8 @@
 title: Staking and Governance
 ---
 
+{@include: ../../snippets/deepbook.mdx}
+
 DeepBook’s novel approach to governance allows users to update a single pool’s three parameters: 
   - taker fee rate
   - maker fee rate
